feat: 관리자 책 추가