@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -21,12 +22,12 @@ public class BookController {
     private List<Book> mockBooks() {
         // Mock data for books
         return Arrays.asList(
-                new Book(1L, "The Lord of the Rings", "J.R.R. Tolkien", 22.99, "/images/book1.jpg", "The first part of Tolkien's epic masterpiece.", 3L, Arrays.asList(1L, 4L)),
-                new Book(2L, "Pride and Prejudice", "Jane Austen", 15.99, "/images/book2.jpg", "A classic novel by Jane Austen.", 1L, Arrays.asList(1L, 2L)),
-                new Book(3L, "To Kill a Mockingbird", "Harper Lee", 12.50, "/images/book3.jpg", "A novel by Harper Lee published in 1960.", 1L, List.of(1L)),
-                new Book(4L, "1984", "George Orwell", 10.99, "/images/book4.jpg", "A dystopian social science fiction novel by George Orwell.", 4L, List.of(3L)),
-                new Book(5L, "A Brief History of Time", "Stephen Hawking", 18.99, "/images/book5.jpg", "A landmark volume in science writing by one of the great minds of our time.", 6L, new ArrayList<>()),
-                new Book(6L, "The Hobbit", "J.R.R. Tolkien", 14.99, "/images/book6.jpg", "A fantasy novel and children's book by J. R. R. Tolkien.", 3L, List.of(4L))
+                new Book(1L, "The Lord of the Rings", "The Fellowship of the Ring", "The first part of Tolkien's epic masterpiece.", "J.R.R. Tolkien", "Allen & Unwin", LocalDateTime.of(1954, 7, 29, 0, 0), "978-0618053267", 25000, 22990, "/images/book1.jpg", true, false, 100, 1200L, Arrays.asList(3L), Arrays.asList(1L, 4L)),
+                new Book(2L, "Pride and Prejudice", "A classic of English literature", "A classic novel by Jane Austen.", "Jane Austen", "T. Egerton, Whitehall", LocalDateTime.of(1813, 1, 28, 0, 0), "978-0141439518", 18000, 15990, "/images/book2.jpg", false, false, 150, 800L, Arrays.asList(1L), Arrays.asList(1L, 2L)),
+                new Book(3L, "To Kill a Mockingbird", "A novel about the serious issues of rape and racial inequality", "A novel by Harper Lee published in 1960.", "Harper Lee", "J. B. Lippincott & Co.", LocalDateTime.of(1960, 7, 11, 0, 0), "978-0446310789", 14000, 12500, "/images/book3.jpg", true, false, 80, 2000L, Arrays.asList(1L), List.of(1L)),
+                new Book(4L, "1984", "A dystopian social science fiction novel", "A dystopian social science fiction novel by George Orwell.", "George Orwell", "Secker & Warburg", LocalDateTime.of(1949, 6, 8, 0, 0), "978-0451524935", 12000, 10990, "/images/book4.jpg", false, false, 200, 1500L, Arrays.asList(4L), List.of(3L)),
+                new Book(5L, "A Brief History of Time", "From the Big Bang to Black Holes", "A landmark volume in science writing by one of the great minds of our time.", "Stephen Hawking", "Bantam Books", LocalDateTime.of(1988, 4, 1, 0, 0), "978-0553380163", 20000, 18990, "/images/book5.jpg", true, false, 120, 900L, Arrays.asList(6L), new ArrayList<>()),
+                new Book(6L, "The Hobbit", "There and Back Again", "A fantasy novel and children's book by J. R. R. Tolkien.", "J.R.R. Tolkien", "George Allen & Unwin", LocalDateTime.of(1937, 9, 21, 0, 0), "978-0345339683", 16000, 14990, "/images/book6.jpg", true, false, 90, 1800L, Arrays.asList(3L), List.of(4L))
         );
     }
 
@@ -85,7 +86,7 @@ public class BookController {
         Category category = mockCategories().stream().filter(c -> c.getId() == categoryId).findFirst().orElse(null);
         if (category != null) {
             List<Book> filteredBooks = mockBooks().stream()
-                    .filter(book -> book.categoryId() == categoryId || (category.getChildren().stream().anyMatch(child -> child.getId() == book.categoryId())))
+                    .filter(book -> book.categoryIds().contains(categoryId) || (category.getChildren().stream().anyMatch(child -> child.getId() == book.categoryIds().get(0)))) // Assuming single category for simplicity in mock
                     .collect(Collectors.toList());
             model.addAttribute("books", filteredBooks);
             model.addAttribute("pageTitle", "Books in Category: " + category.getName());
